force-app/main/default/objects/Sharat_Sushma_Class_c__x/Sharat_Sushma_Class_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>class</externalDataSource>
    <externalName>Sharat_Sushma__Class__c</externalName>
    <label>Class</label>
    <pluralLabel>Class</pluralLabel>
</CustomObject>