force-app/main/default/objects/Sharat_Sushma_Class_c__x/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <externalDeveloperName>LastModifiedById</externalDeveloperName>
    <label>Last Modified By ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>