force-app/main/default/objects/Sharat_Sushma_Class_c__x/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <externalDeveloperName>LastModifiedDate</externalDeveloperName>
    <label>Last Modified Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>