force-app/main/default/objects/Sharat_Sushma_Class_c__x/fields/Sharat_Sushma_Ex_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Ex_Id_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Ex_Id__c</externalDeveloperName>
    <label>Ex Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>