force-app/main/default/objects/Sharat_Sushma_Class_c__x/fields/Sharat_Sushma_Hello_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Hello_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Hello__c</externalDeveloperName>
    <label>Hello</label>
    <length>18</length>
    <type>Text</type>
</CustomField>