force-app/main/default/objects/Sharat_Sushma_Class_c__x/fields/Sharat_Sushma_Image1_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Image1_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Image1__c</externalDeveloperName>
    <label>Image</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>