force-app/main/default/objects/Sharat_Sushma_Class_c__x/fields/Sharat_Sushma_Increment_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Increment_Number_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Increment_Number__c</externalDeveloperName>
    <label>Increment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>