force-app/main/default/objects/Sharat_Sushma_Class_c__x/fields/Sharat_Sushma_text_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_text_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__text__c</externalDeveloperName>
    <label>text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>