force-app/main/default/objects/Sharat_Sushma_Class_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Sharat_Sushma_Amount_c__c</columns>
    <columns>Sharat_Sushma_Hello_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>